# web-development-with-python-and-flask-by-jovian

./: .replit  app.py  pyproject.toml
templates/: home.html
