[tool.poetry]
name = "repl-nix-web-development-with-python-and-flask-by-jovian"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_web_development_with_python_and_flask_by_jovian"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
